# partition_tree

./: .gitignore  CNAME  Cargo.toml  README.md  RELEASING.md  robots.txt  sitemap.xml
.github/agents/: code-design-agent.agent.md
.github/workflows/: CI.yml  docs-latest-ci.yml  integration-ci.yml  pyo3-ci.yml  python-package-ci.yml  rust-crates-ci.yml
_agents/: refine-after-fit.md
crates/estimators/: Cargo.toml  LICENSE
crates/estimators/src/: api.rs  lib.rs
crates/partition_tree/: ARCHITECTURE_REVIEW.md  CURRENT_BUGS.md  Cargo.toml  PROFILING_GUIDE.md
crates/partition_tree/benches/: RESULTS.md  forest_bench.rs
crates/partition_tree/examples/: apply_leaf_indices.rs  debug.rs  debug_v2.rs  determinism_check.rs  simple_tree.rs  simple_tree_regression.rs  simple_tree_regression_v2.rs  simple_tree_v2.rs
crates/partition_tree/src/: cell.rs  conf.rs  dataframe.rs  dataset_view.rs  density.rs  dtype_adapter.rs  estimator.rs  estimator_forest.rs  forest.rs  lib.rs  loss.rs  node.rs  onedimpartition.rs  refine.rs  rule.rs  rules.rs  split.rs  split_result.rs  split_searcher.rs  tree.rs  tree_builder.rs
crates/partition_tree/src/column_split/: categorical.rs  continuous.rs  integer.rs  mod.rs  quantized_continuous.rs
crates/partition_tree/src/dtype_plugin/: categorical.rs  continuous.rs  integer.rs  mod.rs  quantized_continuous.rs
crates/partition_tree/src/estimators/: forest.rs  mod.rs  tree.rs
crates/partition_tree/src/predict/: conditioned_cell.rs  mod.rs  piecewise_distribution.rs  probability.rs
crates/partition_tree/src/serde/: dataframe_schema.rs  mod.rs  partitions.rs  rules.rs  schema.rs
crates/partition_tree/src/v2/: CATEGORICAL.md  CONTINUOUS.md  PLAN.md  README.md  cell.rs  column_split.rs  dataset_view.rs  dtype_plugin.rs  estimator.rs  forest.rs  loss.rs  mod.rs  node.rs  rule.rs  split_result.rs  split_searcher.rs  tree.rs  tree_builder.rs
crates/partition_tree/src/v2/column_split/: categorical.rs  continuous.rs  integer.rs  mod.rs
crates/partition_tree/src/v2/docs/: PREDICTION.md
crates/partition_tree/src/v2/dtype_plugin/: categorical.rs  continuous.rs  integer.rs  mod.rs
crates/partition_tree/src/v2/predict/: conditioned_cell.rs  disjoint.rs  mod.rs  piecewise_distribution.rs
crates/partition_tree/src/v2/serde/: mod.rs  rules.rs
crates/partition_tree/tests/: accuracy_test.rs  cell_test.rs  convergence_check.rs  convergence_forest_test.rs  density_test.rs  determinism_test.rs  estimators_iris_test.rs  forest_test.rs  forest_v2_test.rs  interval_gap_test.rs  node_test.rs  onedimpartition_dynamic_test.rs  onedimpartition_test.rs  probability_test.rs  ptree_dataframe_test.rs  rules_test.rs  split_column_bias_test.rs  split_test.rs  string_to_categorical_test.rs  tree_test.rs
dev/: index.html  search.json  sitemap.xml
dev/tutorials/: classification.html  probabilistic_regression.html  quantized_target_skpro.html  regression.html  sklearn.html  skpro.html
latest/tutorials/: classification.html  regression.html  skpro.html
partition_tree/: .gitignore  publish.rs  pyproject.toml
partition_tree/docs/: _quarto.yml  api.qmd  index.qmd  styles.css  theory.qmd
partition_tree/docs/_site/: about.html  api.html  index.html  search.json  styles.css  theory.html
partition_tree/docs/_site/tutorials/: sklearn.html  skpro.html
partition_tree/docs/includes/: code-retokenize.html
partition_tree/docs/scripts/: generate_giff.py
partition_tree/docs/tutorials/: classification.qmd  probabilistic_regression.qmd  quantized_target_skpro.ipynb  regression.qmd  sklearn.qmd  skpro.qmd
partition_tree/docs/tutorials/skpro_files/execute-results/: html.json
partition_tree/notebooks/: illustration.ipynb  partition_tree_regressor.ipynb  partition_tree_skpro.ipynb
partition_tree/src/partition_tree/: __init__.py  utils.py
partition_tree/src/partition_tree/estimators/: __init__.py  base.py  partition_tree.py
partition_tree/src/partition_tree/sklearn/: __init__.py  partition_tree.py
partition_tree/src/partition_tree/skpro/: __init__.py  distribution.py  partition_tree.py
partition_tree/tests/: test_determinism.py  test_empty_categories_in_leaves.py  test_estimator_checks.py  test_feature_split_fraction.py  test_interval_distribution_merge.py  test_noncontiguous_labels.py  test_py_partition_tree_python_interface.py
partition_tree/tests/sklearn/: test_classifier_class_mapping.py
partition_tree/tests/skpro/: test_consistency.py  test_mixture_distribution.py  test_skpro_estimator_checks.py  test_skpro_estimators.py
previews/pr-10/: api.html  index.html  search.json  sitemap.xml  theory.html
previews/pr-10/tutorials/: classification.html  probabilistic_regression.html  quantized_target_skpro.html  regression.html  sklearn.html  skpro.html
previews/pr-12/: search.json  sitemap.xml
previews/pr-12/tutorials/: classification.html  probabilistic_regression.html  regression.html  sklearn.html  skpro.html
previews/pr-13/: api.html  sitemap.xml
previews/pr-13/tutorials/: classification.html  probabilistic_regression.html  (+3 more)
previews/pr-14/: sitemap.xml
previews/pr-16/: sitemap.xml
previews/pr-17/: sitemap.xml
pyo3_partition_tree/: Cargo.toml  README.md  publish.sh  pyproject.toml
pyo3_partition_tree/src/: lib.rs
pyo3_partition_tree/tests/: test_forest_classification.py  test_forest_tree_diversity.py  test_prediction_variance.py  test_python.py  test_refine_after_fit.py
scripts/: create_github_release.sh
tests/: test_cptree.py  test_determinism.py  test_empty_categories_in_leaves.py  test_estimator_checks.py  test_feature_split_fraction.py  test_interval_distribution_merge.py  test_noncontiguous_labels.py  test_partition_tree_regressor.py  test_py_partition_tree_python_interface.py  test_sklearn_compatibility.py  test_skpro_cptree.py
tutorials/: probabilistic_regression.html  regression.html  sklearn.html
v0.0.5/tutorials/: classification.html  probabilistic_regression.html  sklearn.html  skpro.html
v0.0.6/: sitemap.xml  theory.html
v0.0.6/tutorials/: classification.html  probabilistic_regression.html  sklearn.html
(+17 files in other folders)
