[project]
name = "partition_tree"
version = "0.0.2"
description = "Partition Trees for Probabilistic Tasks"
authors = [ {name = "felipeangelimvieira", email = "felipeangelim@gmail.com"} ]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "scikit-learn>=1.6.1,<2.0.0",
    "pandas>=2.2.3,<3.0.0",
    "skpro>=2.9.0,<3.0.0",
    "tqdm>=4.67.1,<5.0.0",
    "snakeviz>=2.2.2,<3.0.0",
    "maturin>=1.9.3,<2.0.0",
    "polars>=1.33.1,<2.0.0",
    "pyarrow>=21.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.5,<9.0.0"]


[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["partition_tree*"]

[tool.setuptools]
# Console scripts intentionally removed (fastbench CLI removed per request)