[project]
name = "partition_tree"
version = "0.0.2"
description = "Partition Trees for Probabilistic Tasks"
authors = [ {name = "felipeangelimvieira", email = "felipeangelim@gmail.com"} ]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "scikit-learn>=1.6.1,<2.0.0",
    "pandas>=2.2.3,<3.0.0",
    "skpro>=2.9.0,<3.0.0",
    "tqdm>=4.67.1,<5.0.0",
    "snakeviz>=2.2.2,<3.0.0",
    "maturin>=1.9.3,<2.0.0",
    "polars>=1.33.1,<2.0.0",
    "pyarrow>=21.0.0",
    "pyo3-partition-tree",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5,<9.0.0",
    "ipykernel>=6.29.0",
    "matplotlib>=3.9.0",
    "jupyterlab>=4.0.0",
    "nbformat>=5.10.0",
]


[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["partition_tree*"]

[dependency-groups]
docs = [
    "quarto>=0.1.0",
]

[tool.uv.sources]
pyo3-partition-tree = { path = "../pyo3_partition_tree", editable = true }

[tool.setuptools]
# Console scripts intentionally removed (fastbench CLI removed per request)