[project]
name = "partition_tree"
version = "0.0.3"
description = "Partition Trees for Probabilistic Tasks"
authors = [ {name = "felipeangelimvieira", email = "felipeangelim@gmail.com"} ]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "scikit-learn>=1.6.1,<2.0.0",
    "pandas>=2.2.3,<3.0.0",
    "skpro>=2.9.0,<3.0.0",
    "tqdm>=4.67.1,<5.0.0",
    "snakeviz>=2.2.2,<3.0.0",
    "polars>=1.33.1,<2.0.0",
    "pyarrow>=21.0.0",
    "pyo3-partition-tree>=0.0.3,<0.0.4",
]

[project.urls]
Repository = "https://github.com/felipeangelimvieira/partition_tree"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5,<9.0.0",
    "ipykernel>=6.29.0",
    "matplotlib>=3.9.0",
    "jupyterlab>=4.0.0",
    "nbformat>=5.10.0",
]
docs = [
    "jupyter>=1.1.0",
    "PyYAML>=6.0.0",
    "ucimlrepo>=0.0.7",
    "matplotlib>=3.9.0",
]


[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["partition_tree*"]

[dependency-groups]
dev = [
    "ucimlrepo>=0.0.7",
]
docs = [
    "quarto>=0.1.0",
]

[tool.setuptools]
# Console scripts intentionally removed (fastbench CLI removed per request)
