[package]
name = "partition_tree"
version = "0.1.0"
edition = "2024"

[lib]
name = "partition_tree"
crate-type = ["cdylib", "rlib"]

[dependencies]
estimator_api = { version = "0.1.0", path = "../estimator_api" }
flamegraph = "0.6.8"
itertools = "0.14.0"
polars = { version = "0.51", features = ["dtype-categorical", "lazy", "dtype-u8", "dtype-u16"] }
pyo3 = "0.25.1"
pyo3-polars = "0.23.1"
rand = "0.9.2"
rayon = "1.10.0"
statrs = "0.18.0"
tqdm = "0.8.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
debug = true

