[package]
name = "partition_tree"
version = "0.0.4"
edition = "2024"
description = "Partition Tree: conditional density estimation in general outcome spaces"
repository = "https://github.com/felipeangelimvieira/partition_tree"
license-file = "LICENSE"

[lib]
name = "partition_tree"
crate-type = ["rlib"]

[dependencies]
bincode = "1.3"
estimators = { version = "0.0.2", path = "../estimators" }
flamegraph = "0.6.8"
itertools = "0.14.0"
polars = { version = "0.51", features = ["dtype-categorical", "lazy", "dtype-u8", "dtype-u16"] }
rand = "0.9.2"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
statrs = "0.18.0"
tqdm = "0.8.0"
typetag = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
csv = "1"
reqwest = { version = "0.12", features = ["blocking"] }
serde_json = "1.0"

[[bench]]
name = "forest_bench"
harness = false
